--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,20 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
-.settings/
 
 # Eclipse project files
-#.classpath
-#.project
+.classpath
+.project
+.settings
+
+# IntelliJ IDEA
+.idea
+*.iml
+*.ipr
+*.iws
+classes
+gen-external-apklibs
+
+# Gradle
+.gradle
+build
