--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ task wrapper(type: Wrapper) {
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
 
